<?xml version="1.0"?>
<package format="2">
  <name>rostak</name>
  <version>1.0.0</version>
  <description>A rostak bridge</description>
  <maintainer email="jeffrey.mattson@westpoint.edu">Jeff Mattson</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
</package>
