<?xml version="1.0"?>
<package format="2">
  <name>rostak</name>
  <version>1.0.0</version>
  <description>A rostak bridge</description>
  <maintainer email="jeffrey.mattson@westpoint.edu">Jeff Mattson</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
</package>
